--- a/Lux.cabal
+++ b/Lux.cabal
@@ -30,15 +30,16 @@ library
 
                         
     default-language:    Haskell2010
+  ghc-options:  -fwarn-incomplete-patterns
 
 executable Lux
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-patterns
   build-depends:       base
                      , Lux
   default-language:    Haskell2010
 
 source-repository head
   type:     git
-  location: https://github.com/ulyssesp/LambdaDesigner-sample
+  location: https://github.com/ulyssesp/Lux
