--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,10 @@ cabal.sandbox.config
 cabal.project.local
 .HTF/
 
-# Movies
+# Media
 *.mp4
 *.mov
+*.mp3
 
 # elm-package generated files
 elm-stuff
